# Vite-ExpressJS-Tauri-Template-DevKit

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-release.yml
scripts/: copy-vite-icons.js  icons-generate.js
server/: .env.example  package-lock.json  package.json
server/prisma/: schema.prisma
server/src/: index.js  index.js.map  index.ts
server/src/lib/: prisma.ts
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/: icon-options.json
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs
src-tauri/tauri-plugin-android-ui/: Cargo.toml  build.rs
src-tauri/tauri-plugin-android-ui/android/: build.gradle.kts  proguard-rules.pro
src-tauri/tauri-plugin-android-ui/android/src/main/java/app/tauri/androidui/: AndroidUiPlugin.kt
src-tauri/tauri-plugin-android-ui/permissions/: default.toml
src-tauri/tauri-plugin-android-ui/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-android-ui/permissions/autogenerated/commands/: get_mosaic.toml  set_mosaic.toml
src-tauri/tauri-plugin-android-ui/permissions/schemas/: schema.json
src-tauri/tauri-plugin-android-ui/src/: android_only.rs  commands.rs  error.rs  lib.rs  models.rs
