[package]
name = "tauri-plugin-android-ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Android-only system UI / window mosaic modes (status and navigation bar behavior)."
license = "MIT"
links = "tauri-plugin-android-ui"
build = "build.rs"

[lib]
name = "tauri_plugin_android_ui"
crate-type = ["lib"]

[package.metadata.platforms.support]
windows = { level = "none", notes = "" }
linux = { level = "none", notes = "" }
macos = { level = "none", notes = "" }
android = { level = "full", notes = "" }
ios = { level = "none", notes = "Android only — commands are no-ops on iOS." }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
thiserror = "1"
